kubernetes/backend-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: bootcamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: achebeh/devopsbootcamp-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: bootcamp
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: bootcamp
spec:
  ingressClassName: nginx
  rules:
    - host: api.devopsbootcamp.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
